<resources>
    <string name="app_name">Tabah</string>
    <string name="App_label">tabah</string>
    <string name="title_activity_nav_drawer">nav_drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_nama">Nama Pengguna</string>
    <string name="nav_header_saldo">Rp.20.000</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="Versi_apk">Version 0.0.1</string>

    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_jual_sampah">Jual Sampah</string>
    <string name="menu_Shopping">Shopping</string>
    <string name="menu_setting">Settings</string>
    <string name="menu_help_center">Help Center</string>
    <string name="menu_about">About</string>
    <string name="menu_tools">menu_tools</string>
    <string name="txt_shopping">Shopping</string>
    <string name="txt_help_center">Help Center</string>
    <string name="txt_about">About</string>

    <string name="txt_histori_transaksi">Histori Transaksi</string>
    <string name="txt_tukar_saldo">Tukar Saldo</string>
    <string name="txt_pulsa">Pulsa</string>
    <string name="txt_sedekah">Sedekah</string>
    <string name="txt_bayar">Bayar</string>

    <string name="txt_his1">Pembelian Pulsa</string>
    <string name="txt_his2">Sedekah ke ...</string>
    <string name="txt_his3">Pembayaran ke ...</string>
    <string name="txt_login">Login</string>
    <string name="txt_hint_username">Username</string>
    <string name="txt_hint_password">Password</string>
    <string name="txt_register">Register</string>
    <string name="txt_hint_nama">Nama</string>
    <string name="txt_hint_email">Email</string>
    <string name="txt_hint_sip_password">Confirm Password</string>
    <string name="txt_lupapw">LUPA PASSWORD</string>
    <string name="txt_hint_ok">OK</string>
    <string name="txt_hint_verifikasi">Kode Verifikasi</string>
    <string name="txt_newpw">NEW PASSWORD</string>
    <string name="txt_next">Next</string>
    <string name="txt_lupa_password"><u>Lupa password ?</u></string>
    <string name="txt_belum_punya_akun_register_disini"><u>Belum punya akun ? Register disini</u></string>
    <string name="txt_sudah_punya_akun_login_disini"><u>Sudah punya akun ? Login disini</u></string>


    <string name="hint_harus_diisi">Harus diiisi</string>
    <string name="hint_email_tidak_valid">Email tidak valid</string>
    <string name="hint_email_terdaftar">Email sudah terdaftar</string>
    <string name="hint_password_lemah">Password lemah</string>
    <string name="hint_password_beda">Password tidak sama</string>
    <string name="hint_password_salah">Password salah</string>

    <string name="hint_"></string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="beli_sekarang">BELI SEKARANG</string>
    <string name="detail_produk">Detail Produk</string>
    <string name="txt_hint_alamat">Alamat</string>
    <string name="txt_hint_namabarang">Nama Barang</string>
    <string name="txt_hint_harga">Harga</string>
    <string name="txt_hint_stok">Stok</string>
    <string name="txt_hint_jualbarang">Jual Barang</string>
    <string name="txt_hint_deskripsi">Deksripsi</string>
    <string name="txt_hint_telpon">Telpon</string>
    <string name="txt_hint_simpanperubahan">Simpan Perubahan</string>

    <string-array name="planets_array">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>

</resources>
