<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:checkableBehavior="single"
        android:id="@+id/group_atas">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_menu_person"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_sell"
            android:icon="@drawable/ic_attach_money_"
            android:title="@string/menu_jual_sampah"/>
        <item
            android:id="@+id/nav_shopping"
            android:icon="@drawable/ic_shopping_cart"
            android:title="@string/txt_shopping"
            />
    </group>

    <group
        android:checkableBehavior="single"
        android:id="@+id/group_bawah">
        <item
            android:id="@+id/nav_settings"
            android:title="@string/menu_setting"/>
        <item
            android:id="@+id/nav_helpcenter"
            android:title="@string/txt_help_center" />
        <item
            android:id="@+id/nav_about"
            android:title="@string/txt_about" />
    </group>

</menu>
