<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.faeddah.tabah.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.faeddah.tabah.ui.Profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.faeddah.tabah.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_jual_sampah"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.faeddah.tabah.ui.tools.ToolsFragment"
        android:label="@string/menu_Shopping"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.faeddah.tabah.ui.share.ShareFragment"
        android:label="@string/menu_setting"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.faeddah.tabah.ui.send.SendFragment"
        android:label="@string/menu_help_center"
        tools:layout="@layout/fragment_send" />

    <fragment
        android:id="@+id/nav_About"
        android:name=""
        android:label="@string/menu_about"
        tools:layout=""/>
</navigation>