<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/asset_main_color_toolsbar">


    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:gravity="center_vertical"
        android:padding="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginBottom="16dp"
            android:text="@string/txt_login"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:textSize="30sp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lo_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_login"
            android:hint="@string/txt_hint_email"
            android:textColorHint="@android:color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:inputType="textEmailAddress"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lo_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/lo_email"
            android:hint="@string/txt_hint_password"
            android:textColorHint="@android:color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@android:color/white"
                android:lines="1"
                android:imeOptions="actionDone"/>

        </com.google.android.material.textfield.TextInputLayout>

        <GridLayout
            android:id="@+id/lo_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/lo_password"
            android:padding="@dimen/activity_vertical_margin"
            android:columnCount="2">

            <Button
                android:layout_columnWeight="1"
                android:id="@+id/btn_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_vertical_margin"
                android:gravity="center"
                android:text="Login"
                android:textColor="@color/colorPrimary"
                android:backgroundTint="@android:color/white"
                android:imeOptions="actionDone"/>


            <Button
                android:layout_columnWeight="1"
                android:id="@+id/btn_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_vertical_margin"
                android:gravity="center"
                android:text="Cancel"
                android:textColor="@color/colorPrimary"
                android:backgroundTint="@android:color/white" />
        </GridLayout>


        <TextView
            android:id="@+id/tv_forget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/lo_btn"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:clickable="true"
            android:text="@string/txt_lupa_password"
            android:textSize="15sp"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:focusable="true" />


        <TextView
            android:id="@+id/tv_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:text="@string/txt_belum_punya_akun_register_disini"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:layout_alignParentBottom="true"
            android:focusable="true"/>

        <ProgressBar
            android:id="@+id/progresbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_below="@id/lo_email"
            android:gravity="center"
            android:visibility="gone"/>
    </RelativeLayout>


</LinearLayout>