<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:content="com.faedah.tabah.ui.Profile.ProfileFragment"
    android:background="@color/graylight"
    android:orientation="vertical"
    android:padding="24dp">

    <LinearLayout
        android:id="@+id/ll_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@drawable/asset_shape"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_profil"
            android:layout_width="95dp"
            android:layout_height="95dp"
            android:layout_marginTop="8dp"
            tools:src="@android:color/darker_gray"/>
        <TextView
            android:id="@+id/tv_profilnama"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textSize="18sp"
            android:textAlignment="center"
            tools:text="Nama Profil"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="8dp">

            <ImageButton
                android:id="@+id/img_saldo"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:background="@drawable/asset_round_button"
                android:src="@drawable/ic_cycle"/>
            <TextView
                android:id="@+id/tv_saldo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:layout_toRightOf="@+id/img_saldo"
                android:textSize="23sp"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                tools:text="Rp.999999999"/>

            <ImageButton
                android:layout_centerVertical="true"
                android:background="@drawable/asset_round_button"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/ic_add"
                android:layout_marginLeft="20dp"
                android:layout_toRightOf="@+id/tv_saldo"/>
        </RelativeLayout>
    </LinearLayout>


    <TextView
        android:id="@+id/tv_historytrx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textSize="21sp"
        android:text="@string/txt_histori_transaksi"/>


    <RelativeLayout
        android:id="@+id/rl_mid_sec"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_historytrx"
        android:gravity="center"
        android:padding="8dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/his_1"
            app:cardCornerRadius="@dimen/asset_radius_card"
            android:layout_width="75dp"
            android:layout_height="50dp"
            android:layout_marginRight="8dp"
            android:padding="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/txt_his1"
                android:maxLines="3"
                android:textSize="12sp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textAlignment="center"
                android:justificationMode="inter_word"
                android:ellipsize="end"/>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/his_2"
            app:cardCornerRadius="@dimen/asset_radius_card"
            android:layout_width="75dp"
            android:layout_height="50dp"
            android:layout_marginRight="8dp"
            android:layout_toRightOf="@id/his_1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/txt_his2"
                android:maxLines="3"
                android:textSize="12sp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textAlignment="center"
                android:justificationMode="inter_word"
                android:ellipsize="end"/>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/his_3"
            app:cardCornerRadius="@dimen/asset_radius_card"
            android:layout_width="75dp"
            android:layout_height="50dp"
            android:layout_toRightOf="@id/his_2">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/txt_his3"
                android:maxLines="3"
                android:textSize="12sp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textAlignment="center"
                android:justificationMode="inter_word"
                android:ellipsize="end"/>
        </androidx.cardview.widget.CardView>

        <ImageButton
            android:id="@+id/btn_showDetailHistory"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:background="@drawable/asset_round_button"
            android:src="@drawable/ic_arrow_right" />
    </RelativeLayout>


    <TextView
        android:id="@+id/tv_tukarsaldo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textSize="21sp"
        android:text="@string/txt_tukar_saldo"/>


    <RelativeLayout
        android:id="@+id/rl_bottom"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@+id/tv_tukarsaldo"
        android:background="@drawable/asset_shape"
        android:gravity="center"
        android:padding="20dp">

        <ImageButton
            android:id="@+id/bt_ll_bottom_left"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerVertical="true"
            android:background="@drawable/asset_round_button"
            android:src="@drawable/ic_menu_camera"/>
        <TextView
            android:id="@+id/tv_ll_bottom_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bt_ll_bottom_left"
            android:layout_alignLeft="@id/bt_ll_bottom_left"
            android:layout_alignRight="@id/bt_ll_bottom_left"
            android:padding="6dp"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textSize="18sp"
            android:text="@string/txt_pulsa"/>

        <ImageButton
            android:id="@+id/bt_ll_bottom_center"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerInParent="true"
            android:background="@drawable/asset_round_button"
            android:src="@drawable/ic_menu_gallery" />
        <TextView
            android:id="@+id/tv_ll_bottom_center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_below="@id/bt_ll_bottom_left"
            android:padding="6dp"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textSize="18sp"
            android:text="@string/txt_sedekah"/>

        <ImageButton
            android:id="@+id/bt_ll_bottom_right"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerInParent="true"
            android:layout_alignParentRight="true"
            android:background="@drawable/asset_round_button"
            android:src="@drawable/ic_menu_send" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@id/bt_ll_bottom_right"
            android:layout_alignLeft="@id/bt_ll_bottom_right"
            android:layout_below="@id/bt_ll_bottom_right"
            android:padding="6dp"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textSize="18sp"
            android:text="@string/txt_bayar"/>
    </RelativeLayout>

</LinearLayout>